Changes to be committed:#	modified:   Mike/bingo_game/css/styles.css adjusted the styles for the bingo game to improve layout and responsiveness. adjusted the grid layout to ensure proper alignment of bingo cards.

--- a/Mike/bingo_game/css/styles.css
+++ b/Mike/bingo_game/css/styles.css
@@ -28,11 +28,11 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 80%;  
+    /* width: 80%;   */
     max-width: 1200px;
     margin: 0 auto;
     padding: 20px;
-    background-color: rgb(255, 255, 255);
+    background-color: rgba(247, 245, 141, 0.384);
     border-radius: 10px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     border: 1px solid rgb(220, 220, 220);
